--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,107 +8,161 @@
     android:padding="5dp"
     tools:context=".MainActivity">
 
-    <TableLayout
+    <ScrollView
+        android:id="@+id/myScroll"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="50dp">
+        android:layout_height="match_parent">
 
-        <TableRow
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <ImageButton
-                android:id="@+id/btnRadio1"
-                style="@android:style/Widget.Holo.ImageButton"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:layout_weight="1"
-                android:contentDescription="Radio1"
-                android:onClick="onClickStart"
-                android:scaleType="fitCenter"
-                android:src="@drawable/podmoskovie"
-                android:text="@string/http"
-                android:textSize="12sp"
-                tools:ignore="UsingOnClickInXml"
-                tools:src="@drawable/podmoskovie" />
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <ImageButton
-                android:id="@+id/btnMenty"
-                style="@android:style/Widget.Holo.ImageButton"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:layout_weight="1"
-                android:contentDescription="Menty"
-                android:onClick="onClickStart"
-                android:scaleType="fitCenter"
-                android:src="@drawable/milicia"
-                android:text="@string/stream"
-                android:textSize="12sp"
-                tools:ignore="UsingOnClickInXml"
-                tools:src="@drawable/milicia" />
+                <ImageView
+                    android:id="@+id/imageVibor"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_weight="1"
+                    android:contentDescription="@string/vibor"
+                    android:src="@drawable/vibor"
+                    tools:ignore="ImageContrastCheck" />
 
-        </TableRow>
+                <ProgressBar
+                    android:id="@+id/progressBar"
+                    style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_weight="1"
+                    android:progressTint="#FFC400"
+                    android:visibility="gone" />
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+                <ImageButton
+                    android:id="@+id/btnRadio1"
+                    style="@android:style/Widget.Holo.ImageButton"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_weight="1"
+                    android:contentDescription="@string/radio1"
+                    android:onClick="onClickStart"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/podmoskovie"
+                    android:textSize="12sp"
+                    tools:ignore="UsingOnClickInXml"
+                    tools:src="@drawable/podmoskovie" />
 
-            <ImageButton
-                android:id="@+id/btnNashe"
-                style="@android:style/Widget.Holo.ImageButton"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:layout_weight="1"
-                android:onClick="onClickStart"
-                android:scaleType="fitCenter"
-                android:src="@drawable/nashe"
-                android:text="@string/sd"
-                android:textSize="12sp"
-                tools:ignore="ContentDescription,UsingOnClickInXml" />
+            </TableRow>
 
-            <ImageButton
-                android:id="@+id/btnNashe20"
-                style="@android:style/Widget.Holo.ImageButton"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:layout_weight="1"
-                android:contentDescription="TODO"
-                android:onClick="onClickStart"
-                android:scaleType="fitCenter"
-                android:src="@drawable/nashe20"
-                android:text="@string/uri"
-                android:textSize="12sp"
-                tools:ignore="UsingOnClickInXml" />
-        </TableRow>
+            <TableLayout
+                android:id="@+id/tableLayout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="50dp">
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-            <ImageButton
-                android:id="@+id/btnComedy"
-                style="@android:style/Widget.Holo.ImageButton"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:layout_weight="1"
-                android:contentDescription="TODO"
-                android:onClick="onClickStart"
-                android:scaleType="fitCenter"
-                android:src="@drawable/comedy"
-                android:text="@string/raw"
-                android:textSize="12sp"
-                tools:ignore="UsingOnClickInXml" />
+                    <ImageButton
+                        android:id="@+id/btnNashe"
+                        style="@android:style/Widget.Holo.ImageButton"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
+                        android:layout_weight="1"
+                        android:contentDescription="@string/nashe"
+                        android:onClick="onClickStart"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/nashe"
+                        android:textSize="12sp"
+                        tools:ignore="ContentDescription,UsingOnClickInXml,ImageContrastCheck" />
 
-            <ProgressBar
-                android:id="@+id/progressBar"
-                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:layout_weight="1"
-                android:progressTint="#FFC400" />
-        </TableRow>
+                    <ImageButton
+                        android:id="@+id/btnNashe20"
+                        style="@android:style/Widget.Holo.ImageButton"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
+                        android:layout_weight="1"
+                        android:contentDescription="@string/nashe20"
+                        android:onClick="onClickStart"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/nashe20"
+                        android:textSize="12sp"
+                        tools:ignore="UsingOnClickInXml" />
+                </TableRow>
 
-    </TableLayout>
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <ImageButton
+                        android:id="@+id/btnAvto"
+                        style="@android:style/Widget.Holo.ImageButton"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
+                        android:layout_weight="1"
+                        android:contentDescription="@string/avto"
+                        android:onClick="onClickStart"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/avto"
+                        android:textSize="12sp"
+                        tools:ignore="UsingOnClickInXml"
+                        tools:src="@drawable/avto" />
+
+                    <ImageButton
+                        android:id="@+id/btnDfm"
+                        style="@android:style/Widget.Holo.ImageButton"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
+                        android:layout_weight="1"
+                        android:contentDescription="@string/dfm"
+                        android:onClick="onClickStart"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/retrofm"
+                        android:textSize="12sp"
+                        tools:ignore="UsingOnClickInXml"
+                        tools:src="@drawable/retrofm" />
+
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <ImageButton
+                        android:id="@+id/btnComedy"
+                        style="@android:style/Widget.Holo.ImageButton"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
+                        android:layout_weight="1"
+                        android:contentDescription="@string/comedy"
+                        android:onClick="onClickStart"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/comedy"
+                        android:textSize="12sp"
+                        tools:ignore="UsingOnClickInXml" />
+
+                    <ImageButton
+                        android:id="@+id/btnMenty"
+                        style="@android:style/Widget.Holo.ImageButton"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
+                        android:layout_weight="1"
+                        android:contentDescription="@string/menty"
+                        android:onClick="onClickStart"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/milicia"
+                        android:textSize="12sp"
+                        tools:ignore="UsingOnClickInXml"
+                        tools:src="@drawable/milicia" />
+
+                </TableRow>
+
+            </TableLayout>
+        </LinearLayout>
+    </ScrollView>
 
     <LinearLayout
         android:id="@+id/linearLayout2"
@@ -125,11 +180,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:contentDescription="@string/resume"
             android:onClick="onClick"
             android:src="@android:drawable/ic_media_pause"
             android:text="@string/pause"
             android:textSize="12sp"
-            tools:ignore="ContentDescription, TouchTargetSizeCheck,TouchTargetSizeCheck,UsingOnClickInXml"
+            tools:ignore="ContentDescription, TouchTargetSizeCheck,TouchTargetSizeCheck,UsingOnClickInXml,ImageContrastCheck"
             tools:src="@android:drawable/ic_media_pause" />
 
         <ImageButton
@@ -138,11 +194,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:contentDescription="@string/pause"
             android:onClick="onClick"
             android:src="@android:drawable/ic_media_play"
             android:text="@string/resume"
             android:textSize="12sp"
-            tools:ignore="ContentDescription,TouchTargetSizeCheck,UsingOnClickInXml"
+            tools:ignore="ContentDescription,TouchTargetSizeCheck,UsingOnClickInXml,ImageContrastCheck"
             tools:src="@android:drawable/ic_media_play" />
 
         <ImageButton
@@ -151,12 +208,13 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:contentDescription="@string/stop"
             android:onClick="onClick"
             android:src="@android:drawable/picture_frame"
             android:text="@string/stop"
             android:textSize="12sp"
             android:textStyle="bold"
-            tools:ignore="ContentDescription,TouchTargetSizeCheck,UsingOnClickInXml" />
+            tools:ignore="ContentDescription,TouchTargetSizeCheck,UsingOnClickInXml,ImageContrastCheck" />
     </LinearLayout>
 
 </RelativeLayout>
