--- a/app/src/main/res/layout/activity_onas.xml
+++ b/app/src/main/res/layout/activity_onas.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ /**
-  ~  * Created by DemonApps on 27.06.19 17:21
-  ~  * Copyright (c) 2019 . All rights reserved.
-  ~  * Last modified 27.06.19 17:17
+  ~  * Created by DemonApps on 01.12.2021, 15:35
+  ~  * Copyright (c) 2021 . All rights reserved.
+  ~  * Last modified 27.11.2021, 16:35
   ~  */
   -->
 
