--- a/app/src/main/res/layout/zastavka.xml
+++ b/app/src/main/res/layout/zastavka.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ /**
-  ~  * Created by DemonApps on 30.09.19 17:28
-  ~  * Copyright (c) 2019 . All rights reserved.
-  ~  * Last modified 21.07.19 20:39
+  ~  * Created by DemonApps on 01.12.2021, 15:35
+  ~  * Copyright (c) 2021 . All rights reserved.
+  ~  * Last modified 27.11.2021, 16:35
   ~  */
   -->
 
