--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ /**
+  ~  * Created by DemonApps on 01.12.2021, 15:35
+  ~  * Copyright (c) 2021 . All rights reserved.
+  ~  * Last modified 27.11.2021, 16:35
+  ~  */
+  -->
+
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
@@ -8,4 +16,7 @@
     <item
         android:id="@+id/action_settings2"
         android:title="@string/group" />
+    <item
+        android:id="@+id/action_settings3"
+        android:title="@string/otherApps" />
 </menu>
