--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?><!--
   ~ /**
-  ~  * Created by DemonApps on 02.12.2021, 17:40
-  ~  * Copyright (c) 2021 . All rights reserved.
-  ~  * Last modified 02.12.2021, 17:37
+  ~  * Created by DemonApps on 04.02.2022, 16:28
+  ~  * Copyright (c) 2022 . All rights reserved.
+  ~  * Last modified 30.12.2021, 19:17
   ~  */
   -->
 
@@ -26,5 +26,7 @@
     <item
         android:id="@+id/action_settings3"
         android:title="@string/otherApps" />
-
+    <item
+        android:id="@+id/action_settings5"
+        android:title="@string/share" />
 </menu>
